tests/security/sinkAnnotation/output.txt
ERROR: TaintedData - input.hack:12:21 - Detected tainted SQL